# DreamDisk-24-entry

./: .clang-format  .gitignore  CMakeLists.txt
assets/soldier/: soldier.aseprite
src/: bb_logger.h  main.c  mainmenu.c  mainmenu.h  menuscene.c  menuscene.h  scene.c  scene.h
